# fastapi

./: .env  .env.example  .gitignore  README.md  pyproject.toml
src/: dev.py  start.py
src/app/: main.py
src/app/core/: config.py  mongodb.py  realtime.py  realtime_fdb.py  realtime_mdb.py  security.py  websocket.py  ws_manager.py
src/app/routes/: auth.py  comandos.py  firebird.py  mongodb.py  pdftext.py  songs.py  task.py  test.py  websocket.py
src/app/schemas/: auth.py  comando.py  firebird.py  middleware.py  mongodb.py  pdftext.py  songs.py  task.py  websocket.py
src/local/: test.py
src/sql/: test.sql
src/utils/: firebird.py  rate_limit.py  realtime_fdb.py  realtime_mdb.py  songs.py
