[project]
name = "apirest"
version = "0.1.0"
description = "Api Rest Python com MongoDB"
authors = [{ name = "ansergio", email = "ansergio@hotmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.1",
  "fdb>=2.0.4",
  "motor>=3.7.1",
  "pacote>=0.3.0",
  "python-jose>=3.5.0",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
dev = "src.dev:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
